Update Babel config and deps

--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
     "url": "https://github.com/arccoza/fsnd_p4_catalog/issues"
   },
   "homepage": "https://github.com/arccoza/fsnd_p4_catalog#readme",
-  "dependencies": {},
+  "dependencies": {
+    "material-ui": "^0.18.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-tap-event-plugin": "^2.0.1"
+  },
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "fly": "^2.0.6",
     "fly-clear": "^1.0.1",
     "fly-esnext": "^2.0.1",
