Fix reactjs Uncaught ReferenceError: process is not defined

--- a/.babelrc
+++ b/.babelrc
@@ -6,9 +6,11 @@
       {
         "modules": false
       }
-    ]
+    ],
+    ["react"]
   ],
   "plugins": [
-    "external-helpers"
+    "external-helpers",
+    "transform-react-jsx"
   ]
 }
