--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
   ],
   "plugins": [
     "external-helpers",
-    "transform-react-jsx"
+    "transform-react-jsx",
+    "transform-class-properties"
   ]
 }
